// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JHipster entities generator regenerating all entities should match snapshot 1`] = `
Object {
  ".jhipster/Bar.json": Object {
    "stateCleared": "modified",
  },
  ".jhipster/Foo.json": Object {
    "stateCleared": "modified",
  },
  ".jhipster/Skip.json": Object {
    "stateCleared": "modified",
  },
  ".yo-rc.json": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Bar.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Foo.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Skip.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/BarRepository.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/FooRepository.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/SkipRepository.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/BarResource.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/FooResource.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/SkipResource.java": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20160926101210_added_entity_Foo.xml": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20160926101211_added_entity_Bar.xml": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20160926101212_added_entity_Skip.xml": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/fake-data/bar.csv": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/fake-data/foo.csv": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/fake-data/skip.csv": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/bar.model.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/bar.routes.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/bar.test-samples.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/delete/bar-delete-dialog.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/delete/bar-delete-dialog.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/delete/bar-delete-dialog.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/detail/bar-detail.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/detail/bar-detail.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/detail/bar-detail.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/list/bar.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/list/bar.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/list/bar.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/route/bar-routing-resolve.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/route/bar-routing-resolve.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/service/bar.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/service/bar.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-form.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-form.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-update.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-update.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-update.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/delete/foo-delete-dialog.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/delete/foo-delete-dialog.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/delete/foo-delete-dialog.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/detail/foo-detail.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/detail/foo-detail.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/detail/foo-detail.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/foo.model.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/foo.routes.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/foo.test-samples.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/list/foo.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/list/foo.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/list/foo.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/route/foo-routing-resolve.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/route/foo-routing-resolve.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/service/foo.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/service/foo.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-form.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-form.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-update.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-update.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-update.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/delete/skip-delete-dialog.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/delete/skip-delete-dialog.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/delete/skip-delete-dialog.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/detail/skip-detail.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/detail/skip-detail.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/detail/skip-detail.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/list/skip.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/list/skip.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/list/skip.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/route/skip-routing-resolve.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/route/skip-routing-resolve.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/service/skip.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/service/skip.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/skip.model.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/skip.routes.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/skip.test-samples.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/update/skip-form.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/update/skip-form.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/update/skip-update.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/update/skip-update.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/update/skip-update.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/bar.json": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/foo.json": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/skip.json": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/BarTest.java": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/FooTest.java": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/SkipTest.java": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/BarResourceIT.java": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/FooResourceIT.java": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/SkipResourceIT.java": Object {
    "stateCleared": "modified",
  },
}
`;

exports[`JHipster entities generator regenerating selected entities with writeEveryEntity should match snapshot 1`] = `
Object {
  ".jhipster/Bar.json": Object {
    "stateCleared": "modified",
  },
  ".jhipster/Foo.json": Object {
    "stateCleared": "modified",
  },
  ".jhipster/Skip.json": Object {
    "stateCleared": "modified",
  },
  ".yo-rc.json": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Bar.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Foo.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Skip.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/BarRepository.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/FooRepository.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/SkipRepository.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/BarResource.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/FooResource.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/SkipResource.java": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20160926101210_added_entity_Foo.xml": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20160926101211_added_entity_Bar.xml": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20160926101212_added_entity_Skip.xml": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/fake-data/bar.csv": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/fake-data/foo.csv": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/fake-data/skip.csv": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/bar.model.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/bar.routes.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/bar.test-samples.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/delete/bar-delete-dialog.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/delete/bar-delete-dialog.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/delete/bar-delete-dialog.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/detail/bar-detail.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/detail/bar-detail.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/detail/bar-detail.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/list/bar.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/list/bar.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/list/bar.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/route/bar-routing-resolve.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/route/bar-routing-resolve.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/service/bar.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/service/bar.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-form.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-form.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-update.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-update.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-update.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/delete/foo-delete-dialog.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/delete/foo-delete-dialog.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/delete/foo-delete-dialog.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/detail/foo-detail.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/detail/foo-detail.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/detail/foo-detail.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/foo.model.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/foo.routes.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/foo.test-samples.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/list/foo.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/list/foo.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/list/foo.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/route/foo-routing-resolve.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/route/foo-routing-resolve.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/service/foo.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/service/foo.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-form.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-form.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-update.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-update.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-update.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/delete/skip-delete-dialog.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/delete/skip-delete-dialog.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/delete/skip-delete-dialog.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/detail/skip-detail.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/detail/skip-detail.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/detail/skip-detail.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/list/skip.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/list/skip.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/list/skip.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/route/skip-routing-resolve.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/route/skip-routing-resolve.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/service/skip.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/service/skip.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/skip.model.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/skip.routes.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/skip.test-samples.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/update/skip-form.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/update/skip-form.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/update/skip-update.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/update/skip-update.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/update/skip-update.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/bar.json": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/foo.json": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/skip.json": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/BarTest.java": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/FooTest.java": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/SkipTest.java": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/BarResourceIT.java": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/FooResourceIT.java": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/SkipResourceIT.java": Object {
    "stateCleared": "modified",
  },
}
`;

exports[`JHipster entities generator regenerating some entities should match snapshot 1`] = `
Object {
  ".jhipster/Bar.json": Object {
    "stateCleared": "modified",
  },
  ".jhipster/Foo.json": Object {
    "stateCleared": "modified",
  },
  ".jhipster/Skip.json": Object {
    "stateCleared": "modified",
  },
  ".yo-rc.json": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Bar.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Foo.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/BarRepository.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/FooRepository.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/BarResource.java": Object {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/FooResource.java": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20160926101210_added_entity_Foo.xml": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20160926101211_added_entity_Bar.xml": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/fake-data/bar.csv": Object {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/fake-data/foo.csv": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/bar.model.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/bar.routes.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/bar.test-samples.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/delete/bar-delete-dialog.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/delete/bar-delete-dialog.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/delete/bar-delete-dialog.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/detail/bar-detail.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/detail/bar-detail.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/detail/bar-detail.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/list/bar.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/list/bar.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/list/bar.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/route/bar-routing-resolve.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/route/bar-routing-resolve.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/service/bar.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/service/bar.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-form.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-form.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-update.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-update.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-update.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/delete/foo-delete-dialog.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/delete/foo-delete-dialog.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/delete/foo-delete-dialog.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/detail/foo-detail.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/detail/foo-detail.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/detail/foo-detail.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/foo.model.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/foo.routes.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/foo.test-samples.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/list/foo.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/list/foo.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/list/foo.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/route/foo-routing-resolve.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/route/foo-routing-resolve.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/service/foo.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/service/foo.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-form.service.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-form.service.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-update.component.html": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-update.component.spec.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-update.component.ts": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/bar.json": Object {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/foo.json": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/BarTest.java": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/FooTest.java": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/BarResourceIT.java": Object {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/FooResourceIT.java": Object {
    "stateCleared": "modified",
  },
}
`;
